Prevent icons from getting cut off

--- a/contentcuration/contentcuration/static/less/admin.less
+++ b/contentcuration/contentcuration/static/less/admin.less
@@ -111,7 +111,7 @@
 			.popover-content{
 				padding: 5px;
 				min-width: 150px;
-				li { margin-top: 10px; }
+				li { padding-top: 10px; }
 				.content_icon {
 					color: @gray-400;
 					margin-right: 5px;
